--- a/backend/public/register.html
+++ b/backend/public/register.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QR Code Registration</title>
+  <link rel="icon" type="image/png" href="https://realsensesolutions.com/images/logo.png">
   <link rel="stylesheet" href="/qr-system/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -101,6 +102,22 @@
         <li>Now when anyone scans your QR code, they'll be redirected to your URL</li>
       </ol>
       <p class="note">Each QR code can only be registered once. If you need to change your URL, please contact us <a href="mailto:info@realsensesolutions.com" class="primary" style="color: #01d101">info@realsensesolutions.com</a>.</p>
+    </div>
+
+    <div class="card" style="margin-top: 20px; border-left: 4px solid #01d101; background-color: #222; color: #fff;">
+      <div style="display: flex; align-items: flex-start; gap: 20px;">
+        <div>
+          <h3 style="color: #fff; margin-top: 0;">Accelerate Your IoT Product Delivery</h3>
+          <p style="color: #ccc; margin-bottom: 15px;">Struggling with manual deployments, missed deadlines, or production issues in your IoT products?</p>
+          <p style="color: #ccc; margin-bottom: 15px;">Realsense Solutions helps startups <strong style="color: #fff">double their delivery velocity</strong>, cut failures, and ship confidently to the edge without growing headcount.</p>
+          <ul style="color: #ccc; padding-left: 20px; margin-bottom: 20px;">
+            <li>Edge-to-cloud infrastructure setup with Terraform/CDK</li>
+            <li>Cross-platform IoT solutions with Flutter</li>
+            <li>Streamlined CI/CD pipelines with GitHub Actions</li>
+          </ul>
+          <a href="https://sf4lwo7sck9.typeform.com/to/RydL3qsx" target="_blank" style="display: inline-block; background-color: #01d101; color: white; padding: 10px 16px; text-decoration: none; border-radius: 4px; font-weight: 500;">Contact Us Today</a>
+        </div>
+      </div>
     </div>
   </main>
 
